Fix menu item height on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -35,7 +35,7 @@ app-celestial-bg {
     }
   }
   select {
-    height: 3vmin;
+    height: 4ch;
   }
 }
 
